# magenta-realtime-mlx-cpp

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  dataset-card.md  pyproject.toml
cli/: CMakeLists.txt  main.cpp
reference/: README.md  install_reference_t5x.sh  pyproject.toml  setup_reference_venv.sh
reference/runner/: generate_ref_runner.py  ref_tf_decode_lib.py  ref_tf_ops.py  ref_tokenize.py
scripts/: _ref_python.py  download_weights_from_hf.py  realtime_playback.py  run_reference_stream.py
src/magenta_realtime_mlx/: CMakeLists.txt  audio.cpp  audio.h  dtype.cpp  dtype.h  musiccoca.cpp  musiccoca.h  nn_ops.h  playback.cpp  playback.h  rvq.cpp  rvq.h  schema.h  spectrostream.cpp  spectrostream.h  style_model.cpp  style_model.h  system.cpp  system.h  weights.cpp  weights.h
src/magenta_realtime_mlx/depthformer/: decode.cpp  decode.h  model.cpp  model.h  modules.cpp  modules.h
tests/: CMakeLists.txt  test_dtype.cpp  test_ref_python.py  test_ref_stream_protocol.py
